<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
        android:id="@+id/foot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/football"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_centerVertical="true"
            android:text="@string/welcome1"
            android:textAllCaps="true"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            android:textColor="@color/welcomeText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/basketball"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_centerVertical="true"
            android:text="@string/welcome2"
            android:textAllCaps="true"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            android:textColor="@color/welcomeText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/volley"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/volleyball"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_centerVertical="true"
            android:text="@string/welcome3"
            android:textAllCaps="true"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            android:textColor="@color/welcomeText" />
    </RelativeLayout>

</LinearLayout>