<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/footLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/football"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/dp10"/>

    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp10">

        <TextView
            android:id="@+id/half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/half"
            android:textColor="@color/myOrange"
            android:textStyle="bold"
            android:textSize="@dimen/sp16"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/myOrange"
            android:textStyle="bold"
            android:textSize="@dimen/sp16"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_marginBottom="@dimen/dp10"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/syrTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/syr"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp16"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/syrLogo"
                android:layout_width="@dimen/dp75"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/syria"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/dp30"
                android:layout_height="wrap_content"
                android:src="@drawable/vs"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/croLogo"
                android:layout_width="@dimen/dp84"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/croatia" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/croTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cro"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp16"/>
        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/logoLay"
        android:layout_marginBottom="@dimen/dp10">

        <LinearLayout
            android:id="@+id/scoreLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp10">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamAGoal"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/goal"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/teamARslt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/teamBRslt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamBGoal"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/goal"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/redCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp10">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamARedCard"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/red_card"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/redCardCounterA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/redCardCounterB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamBRedCard"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/red_card"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yellowCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamAYellowCard"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/yellow_card"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/yellowCardCounterA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/yellowCardCounterB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"
                    android:textSize="@dimen/sp40"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/teamBYellowCard"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/yellow_card"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ctrlBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"/>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"/>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"/>
    </LinearLayout>
</RelativeLayout>